deployment/developer/config_server/spring_config_server/deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1 
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
      - name: config-server
        image: config-server:1.0
        ports:
        - containerPort: 8888
        volumeMounts:
        - name: config-dir
          mountPath: /mnt/config
        imagePullPolicy: Never
      volumes:
      - name: config-dir
        hostPath:
          path: /home/puneet/projects/mosip/myconfig/config-templates 
---
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: default
spec:
  ports:
    - port: 8888 
  selector:
    app: config-server
